--- a/.github/workflows/scheduled-workflow.yml
+++ b/.github/workflows/scheduled-workflow.yml
@@ -3,7 +3,10 @@ name: scheduled-workflow
 on:
   schedule:
     - cron: '0 4 * * *'
-
+  workflow_dispatch:
+    inputs:
+      tags:
+        description: 'Test scenario tags'
 jobs:
   build-us-west-2:
     runs-on: ubuntu-latest
