--- a/.github/workflows/scheduled-workflow.yml
+++ b/.github/workflows/scheduled-workflow.yml
@@ -28,11 +28,11 @@ jobs:
       - name: Run build script
         run: |
           cd deployment
-          MIE_STACK_NAME=mie-dev
+          MIE_STACK_NAME=mie-dev2
           REGION=us-west-2
           VERSION=$SHORT_SHA
-          DIST_OUTPUT_BUCKET=mie-dev-iandow
-          TEMPLATE_OUTPUT_BUCKET=mie-dev-iandow-us-west-2
+          DIST_OUTPUT_BUCKET=mie-dev2-iandow
+          TEMPLATE_OUTPUT_BUCKET=mie-dev2-iandow-us-west-2
           ./build-s3-dist.sh --no-layer --template-bucket $TEMPLATE_OUTPUT_BUCKET --code-bucket $DIST_OUTPUT_BUCKET --version $VERSION --region $REGION
           read -r TEMPLATE < templateUrl.txt
           aws cloudformation create-stack --stack-name $MIE_STACK_NAME --template-url $TEMPLATE --region $REGION --parameters ParameterKey=DeployTestResources,ParameterValue=true ParameterKey=MaxConcurrentWorkflows,ParameterValue=10 ParameterKey=DeployAnalyticsPipeline,ParameterValue=true ParameterKey=EnableXrayTrace,ParameterValue=true ParameterKey=SendAnonymousData,ParameterValue=false --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND --disable-rollback
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MIE_REGION: 'us-west-2'
-      MIE_STACK_NAME: mie-dev
+      MIE_STACK_NAME: mie-dev2
     steps:
       - name: Check out development branch
         uses: actions/checkout@v2.3.4
