--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,4 +27,9 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }}"
+      run: |
+      echo "Hello ${{ github.event.inputs.name }}"
+      stack_status=${{ github.event.inputs.name }}"
+      if [ $stack_status == "World" ]; then echo "ian01"; fi
+      if [ $stack_status != "World" ]; then echo "ian02"; fi
+      
