--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Send greeting
       run: |
         echo "Hello ${{ github.event.inputs.name }}"
-        stack_status=${{ github.event.inputs.name }}"
+        stack_status=${{ github.event.inputs.name }}
         if [ $stack_status == "World" ]; then echo "ian01"; fi
         if [ $stack_status != "World" ]; then echo "ian02"; fi
