--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,11 +24,22 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
+    env:
+      MIE_REGION: 'us-west-2'
+      MIE_STACK_NAME: mie-dev
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: |
-        echo "Hello ${{ github.event.inputs.name }}"
-        stack_status=${{ github.event.inputs.name }}
-        if [ $stack_status == "World" ]; then echo "ian01"; fi
-        if [ $stack_status != "World" ]; then echo "ian02"; fi
+      - name: Check out development branch
+        uses: actions/checkout@v2.3.4
+        with:
+          ref: development
+
+      - name: Initialize AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+            aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.TEST_AWS_SECRET_ACCESS_KEY }}
+            aws-region: us-west-2
+      
+      - name: Run integ tests
+        run: |
+          aws cloudformation describe-stacks --stack-name $MIE_STACK_NAME --region $MIE_REGION --output json --query "Stacks[0].StackStatus"
