--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -42,4 +42,7 @@ jobs:
       
       - name: Run integ tests
         run: |
-          aws cloudformation describe-stacks --stack-name $MIE_STACK_NAME --region $MIE_REGION --output json --query "Stacks[0].StackStatus"
+          # Wait for stack to finish deploying
+          stack_status=$(aws cloudformation describe-stacks --stack-name $MIE_STACK_NAME --region $MIE_REGION --output json --query "Stacks[0].StackStatus")
+          while [ $stack_status == "CREATE_IN_PROGRESS" ]; do sleep 5; stack_status=$(aws cloudformation describe-stacks --stack-name $MIE_STACK_NAME --region $MIE_REGION --output json --query 'Stacks[0].StackStatus'); done
+          echo "$MIE_STACK_NAME stack status: $stack_status"
