--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -45,7 +45,7 @@ jobs:
         shell: bash
         run: |
           # Wait for stack to finish deploying
-          stack_status=$(aws cloudformation describe-stacks --stack-name $MIE_STACK_NAME --region $MIE_REGION --output json --query "Stacks[0].StackStatus")
+          stack_status=$(aws cloudformation describe-stacks --stack-name $MIE_STACK_NAME --region $MIE_REGION --output json --query "Stacks[0].StackStatus" | tr -d '"')
           echo 1-$stack_status
           while [ "$stack_status" == "UPDATE_IN_PROGRESS" ]; do echo 2-$stack_status; sleep 5; stack_status=$(aws cloudformation describe-stacks --stack-name $MIE_STACK_NAME --region $MIE_REGION --output json --query 'Stacks[0].StackStatus'); done
           if [ "$stack_status" == "UPDATE_IN_PROGRESS" ]; then echo "true"; fi
